--- a/Projects/Core/Core.vcxproj
+++ b/Projects/Core/Core.vcxproj
@@ -164,26 +164,37 @@
     <ClInclude Include="..\..\include\Core\Allocator\StackAllocator.h" />
     <ClInclude Include="..\..\include\Core\Base\Assert.h" />
     <ClInclude Include="..\..\include\Core\Base\BitFlags.h" />
-    <ClInclude Include="..\..\include\Core\Base\CoreSystem.h" />
     <ClInclude Include="..\..\include\Core\Base\Logger.h" />
     <ClInclude Include="..\..\include\Core\Base\Result.h" />
     <ClInclude Include="..\..\include\Core\Base\String.h" />
+    <ClInclude Include="..\..\include\Core\Base\StringHelper.h" />
+    <ClInclude Include="..\..\include\Core\IO\DllLoader.h" />
     <ClInclude Include="..\..\include\Core\IO\FileStream.h" />
     <ClInclude Include="..\..\include\Core\IO\Path.h" />
     <ClInclude Include="..\..\include\Core\IO\PathHelper.h" />
+    <ClInclude Include="..\..\include\Core\IO\Stream.h" />
     <ClInclude Include="..\..\include\Core\Json\Json.h" />
+    <ClInclude Include="..\..\include\Core\Math\Math.h" />
+    <ClInclude Include="..\..\include\Core\Math\Matrix.h" />
+    <ClInclude Include="..\..\include\Core\Math\Quaternion.h" />
+    <ClInclude Include="..\..\include\Core\Math\Vector2.h" />
+    <ClInclude Include="..\..\include\Core\Math\Vector4.h" />
+    <ClInclude Include="..\..\include\Core\Math\Vector3.h" />
+    <ClInclude Include="..\..\include\Core\Module\GraphicsFactory.h" />
     <ClInclude Include="..\..\include\Core\Module\Module.h" />
     <ClInclude Include="..\..\include\Core\Module\ModuleSystem.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\include\Core\Module\GraphicsFactory.cpp" />
     <ClCompile Include="..\..\src\Core\Allocator\DoubleBufferAllocator.cpp" />
     <ClCompile Include="..\..\src\Core\Allocator\LinerAllocator.cpp" />
     <ClCompile Include="..\..\src\Core\Allocator\PoolAllocator.cpp" />
     <ClCompile Include="..\..\src\Core\Allocator\StackAllocator.cpp" />
     <ClCompile Include="..\..\src\Core\Base\Logger.cpp" />
     <ClCompile Include="..\..\src\Core\Base\String.cpp" />
+    <ClCompile Include="..\..\src\Core\IO\DllLoader.cpp" />
     <ClCompile Include="..\..\src\Core\IO\FileStream.cpp" />
     <ClCompile Include="..\..\src\Core\IO\Path.cpp" />
     <ClCompile Include="..\..\src\Core\IO\PathHelper.cpp" />
