--- a/Projects/Core/Core.vcxproj.filters
+++ b/Projects/Core/Core.vcxproj.filters
@@ -31,9 +31,6 @@
     <Filter Include="ソース ファイル\Allocator">
       <UniqueIdentifier>{9fd8810c-5a50-4889-9780-a63936ef68d5}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\Base">
-      <UniqueIdentifier>{038ff924-3ff4-44fd-a16d-93d6a26ad658}</UniqueIdentifier>
-    </Filter>
     <Filter Include="ソース ファイル\IO">
       <UniqueIdentifier>{15c15874-a7e5-4937-bcc4-1c3260324e16}</UniqueIdentifier>
     </Filter>
@@ -42,6 +39,12 @@
     </Filter>
     <Filter Include="ソース ファイル\Module">
       <UniqueIdentifier>{7f17e327-53f2-4a80-b31f-206fd1090f6d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Base">
+      <UniqueIdentifier>{038ff924-3ff4-44fd-a16d-93d6a26ad658}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\Math">
+      <UniqueIdentifier>{f76d70ff-421d-4f57-b110-e14325cfdad2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -72,9 +75,6 @@
     <ClInclude Include="..\..\include\Core\Base\BitFlags.h">
       <Filter>ヘッダー ファイル\Base</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\Core\Base\CoreSystem.h">
-      <Filter>ヘッダー ファイル\Base</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\include\Core\Base\Logger.h">
       <Filter>ヘッダー ファイル\Base</Filter>
     </ClInclude>
@@ -100,6 +100,36 @@
       <Filter>ヘッダー ファイル\Module</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\Core\Module\ModuleSystem.h">
+      <Filter>ヘッダー ファイル\Module</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core\Math\Math.h">
+      <Filter>ヘッダー ファイル\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core\Math\Matrix.h">
+      <Filter>ヘッダー ファイル\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core\Math\Quaternion.h">
+      <Filter>ヘッダー ファイル\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core\Math\Vector2.h">
+      <Filter>ヘッダー ファイル\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core\Math\Vector4.h">
+      <Filter>ヘッダー ファイル\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core\Math\Vector3.h">
+      <Filter>ヘッダー ファイル\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core\IO\Stream.h">
+      <Filter>ヘッダー ファイル\IO</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core\Base\StringHelper.h">
+      <Filter>ヘッダー ファイル\Base</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core\IO\DllLoader.h">
+      <Filter>ヘッダー ファイル\IO</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core\Module\GraphicsFactory.h">
       <Filter>ヘッダー ファイル\Module</Filter>
     </ClInclude>
   </ItemGroup>
@@ -136,6 +166,12 @@
     </ClCompile>
     <ClCompile Include="..\..\src\Core\Module\ModuleSystem.cpp">
       <Filter>ソース ファイル\Module</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Core\IO\DllLoader.cpp">
+      <Filter>ソース ファイル\IO</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\include\Core\Module\GraphicsFactory.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
