--- a/Projects/DirectX11/DirectX11.vcxproj
+++ b/Projects/DirectX11/DirectX11.vcxproj
@@ -104,8 +104,7 @@
       <AdditionalLibraryDirectories>C:\Users\MIYAM\Desktop\MyEditor_Project\lib\$(IntDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /d "$(OutDir)$(TargetFileName)" "..\..\build\$(IntDir)"
-xcopy /y /d "$(OutDir)$(TargetName).lib" "..\..\lib\$(IntDir)"</Command>
+      <Command>xcopy /y /d "$(OutDir)$(TargetFileName)" "..\..\build\$(IntDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -168,10 +167,12 @@ xcopy /y /d "$(OutDir)$(TargetName).lib" "..\..\lib\$(IntDir)"</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\Platform\Graphics\DirectX11.h" />
+    <ClInclude Include="..\..\include\Thirdparty\Graphics\DirectX11\DX11GraphicsFactory.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\include\Thirdparty\Graphics\DirectX11\DX11GraphicsFactory.cpp" />
     <ClCompile Include="..\..\src\Platform\Graphics\DirectX11.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="stdafx.cpp">
