--- a/Projects/Platform/Platform.vcxproj
+++ b/Projects/Platform/Platform.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="..\..\include\Platform\Base\ISystem.h" />
     <ClInclude Include="..\..\include\Platform\Base\IWindow.h" />
     <ClInclude Include="..\..\include\Platform\Config.h" />
+    <ClInclude Include="..\..\include\Platform\DesignPattern\Factory.h" />
     <ClInclude Include="..\..\include\Platform\DesignPattern\Singleton.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
